# sbs-rust-contentapi

./: .gitignore  Cargo.toml  README.md  Rocket.toml  publish.sh  refreshMarkup.sh  settings.toml
OLDROCKET/: Cargo.toml  Rocket.toml
OLDROCKET/src/: api_data.rs  bbcode.rs  context.rs  hbs_custom.rs
OLDROCKET/src/routes/: basic.rs  bbcodepreview.rs  forums.rs  imagebrowser.rs
OLDROCKET/templates/: activity.html.hbs  forumroot.html.hbs  index.html.hbs  layout.html.hbs  login.html.hbs  recover.html.hbs  register.html.hbs  search.html.hbs  user.html.hbs
OLDROCKET/templates/partials/: forumpath.html.hbs  optionlist.html.hbs  threadicon.html.hbs
OLDROCKET/templates/widgets/: imagebrowser.html.hbs
basic-profiler/: Cargo.toml
basic-profiler/src/: lib.rs
bbcode/: Cargo.toml  bigtest.sh
bbcode/src/: lib.rs
common/: Cargo.toml
common/src/: admin.rs  constants.rs  data.rs  forms.rs  forum.rs  forum_render.rs  forum_thread.rs  layout.rs  lib.rs  links.rs  prefab.rs  queries.rs  response.rs  search.rs  submission.rs  submissions.rs  view.rs
common/src/render/: forum.rs  layout.rs  mod.rs  submissions.rs
contentapi/: Cargo.toml
contentapi/src/: conversion.rs  endpoints.rs  forms.rs  lib.rs  permissions.rs  search.rs
pages/: Cargo.toml
pages/src/: _forumsys.rs  _pagesys.rs  about.rs  activity.rs  admin.rs  documentation.rs  forum_category.rs  forum_edit_post.rs  forum_edit_thread.rs  forum_main.rs  forum_thread.rs  index.rs  integrationtest.rs  lib.rs  login.rs  page.rs  page_edit.rs  recover.rs  register.rs  registerconfirm.rs  search.rs  searchall.rs  sessionsettings.rs  user.rs  userhome.rs  widget_bbcodepreview.rs  widget_comments.rs  widget_contentpreview.rs  widget_forumpost.rs  widget_imagebrowser.rs  widget_qr.rs  widget_recentactivity.rs  widget_thread.rs  widget_votes.rs
pages/src/common/: forum.rs  mod.rs  page.rs  pagination.rs  submission.rs
pages/src/system/: forum.rs  layout.rs  mod.rs  page.rs
src/: api.rs  api_data.rs  bbcode.rs  config.rs  context.rs  conversion.rs  errors.rs  forms.rs  generic_handlers.rs  hbs_custom.rs  main.rs  multi_routes.rs  pages.rs  routes.rs  routing.rs  special_queries.rs  state.rs  templates.rs
src/api/: endpoints.rs
src/pages/: fragments.rs  index.rs
src/routes/: basic.rs  bbcodepreview.rs  forums.rs  imagebrowser.rs  register.rs  user.rs
src/routing/: admin.rs  basic.rs  forum.rs  login.rs  page.rs  registerconfirm.rs  user.rs  userhome.rs
src/templates/: index.rs
src/warp/: multi_routes.rs
static/: base.css  base.js  custom_12y.css  forum.css  layout.css  layout.js  robots.txt  sb-highlight.js  themes.css
static/forpage/: activity.css  activity.js  admin.css  bbcodepreview.css  forum.css  forum.js  imagebrowser.css  imagebrowser.js  integrationtest.js  pageeditor.css  pageeditor.js  qrwidget.css  qrwidget.js  recentactivity.css  search.css  search.js  searchall.css  user.css  userhome.css  votewidget.css
templates/: about.html.hbs  footer.html.hbs  forum.html.hbs  forumcategory.html.hbs  forumthread.html.hbs  header.html.hbs  layout.html.hbs  login.html.hbs  recover.html.hbs  register.html.hbs  registerconfirm.html.hbs  user.html.hbs  userhome.html.hbs
templates/partials/: basicmeta.html.hbs  errorlist.html.hbs  footer.html.hbs  forumpath.html.hbs
templates/widgets/: bbcodepreview.html.hbs  imagebrowser.html.hbs
