[package]
name = "sbs-rust-contentapi"
version = "0.3.0"
edition = "2021"

[workspace]
members = [ "bbcode", "contentapi", "pages", "basic-profiler" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
warp = { version = "0.3", default-features = false, features = ["multipart"]}
serde = { version = "1", features = ["derive"] }
toml = "0.5.9"

contentapi = { path = "contentapi", features=["profiling"] }
basic-profiler = { path = "basic-profiler" }
bbcode = { path = "bbcode", features=["profiling"] }
pages = { path = "pages" }