[package]
name = "sbs-rust-contentapi"
version = "0.3.0"
edition = "2021"

[workspace]
members = [ "contentapi", "pages", "common" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
warp = { version = "0.3", default-features = false, features = ["multipart"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
onestop = { version = "0.0.1", optional = true }
bbscope = { version = "0.1.6" }
toml = "0.5.9"

contentapi = { path = "contentapi" }
common = { path = "common"}
pages = { path = "pages" }

[features]
default = ["profiling"] # Consider adding perf here someday
perf = ["bbscope/perf"]
profiling = [
    "dep:onestop",
    "contentapi/profiling",
    "common/profiling",
    "pages/profiling"
]