[package]
name = "sbs-rust-contentapi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
reqwest = { version = "~0.11", default-features=false, features = ["json","multipart","stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "~0.7.4", features = ["codec"]}
serde = { version = "~1.0", features = ["derive"] }
tempfile = { version = "~3.3.0" }
timeago = "=0.0.2"  # Says to use this one if you want simple; may upgrade later
thiserror = "1.0"   # This is probably fine to upgrade considering...
anyhow = "1.0"      # This is probably fine to upgrade too
serde_qs = "~0.10"
serde_json = "~1.0"
serde_with = "~2.1"
regex = "1.0" # Will this ever change?
html-escape = "0.2.12"
serde-aux = "~4.1.2"
strum = "~0.24"
strum_macros = "~0.24"
base64-stream = "~1.2.7"
chrono = { version = "~0.4", features = ["serde"] }
lazy_static = "1.4.0"