[package]
name = "bbcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.0", default-features = false, features = ["std"] }
html-escape = "0.2.12"
pretty_assertions = { version = "1.3.0", optional = true }

basic-profiler = { path = "../basic-profiler", optional = true }

[features]
# default = ["bigtest"]
perf = ["regex/perf"]
profiling = ["dep:basic-profiler"]
bigtest = ["dep:pretty_assertions"]