[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.24.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4" } #, features = ["serde"] }
timeago = "=0.0.2"  # Says to use this one if you want simple; may upgrade later
serde_urlencoded = "0.7.1"
serde_json = "1.0"
onestop = { version = "0.0.1", optional = true }
bbscope = { version = "0.1.4" }

contentapi = { path = "../contentapi" }

[features]
profiling = [
    "contentapi/profiling", 
    "bbscope/profiling",
    "dep:onestop"
]