[package]
name = "contentapi"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.11", default-features=false, features = ["json","multipart","stream"] }
hyper = { version = "0.14", features = ["http2", "client", "runtime"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
onestop = { version = "0.0.2", optional = true }
serde-aux = "4.1.2"
serde_json = "1.0"
serde_urlencoded = "0.7.1"

[features]
profiling = ["dep:onestop"]
postdump = [] #WARNING: FEATURE WILL PRINT ALL POST DATA, WHICH WILL INCLUDE PASSWORDS!