[package]
name = "pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.24.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4" } #, features = ["serde"] }
timeago = "=0.0.2"  # Says to use this one if you want simple; may upgrade later
serde_urlencoded = "0.7.1"
serde_json = "1.0"

contentapi = { path = "../contentapi" }
bbcode = { path = "../bbcode" }
basic-profiler = { path = "../basic-profiler", optional = true }

[features]
profiling = [
    "contentapi/profiling", 
    "bbcode/profiling",
    "dep:basic-profiler"
]